Hid the logo until center spacing gets resolved

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body::-webkit-scrollbar {
 .menu {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   height: 12%;
   width: 100%;
   background-color: var(--dark-grey);
@@ -36,7 +36,6 @@ body::-webkit-scrollbar {
   list-style-type: none;
   font-size: 1.5rem;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   height: 100%;
 }
@@ -45,11 +44,11 @@ body::-webkit-scrollbar {
   flex-grow: 1;
   display: flex;
   align-items: center;
-  justify-content: center;
-  height: 100%
+  justify-content: flex-start;
+  height: 100%;
 }
 
 .afc-logo {
   padding-top: 1.5rem;
-  max-height: 115%;
+  max-height: 110%;
 }
